modified gpt2 text similarity

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_text_similarity_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_text_similarity_finetune-KOR.ipynb
@@ -108,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab.token_to_idx"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,12 +182,19 @@
     "\n",
     "train_data_sents = list()\n",
     "\n",
-    "for train_sent_1, train_sent_2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
+    "# for train_sent_1, train_sent_2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
+    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))][:SENT_MAX_LEN] + \\\n",
+    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
+    "#     vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "\n",
+    "for train_sent_1, train_sent_2 in tqdm(zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']), \n",
+    "                                       total=len(train_data_snli_xnli['sentence1'])):\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + \\\n",
+    "    [vocab[vocab.eos_token]]\n",
     "    \n",
     "    train_data_sents.append(tokens)\n",
+    "     \n",
     "train_data_sents = pad_sequences(train_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
     "\n",
     "train_data_sents = np.array(train_data_sents, dtype=np.int64)"
@@ -194,10 +210,16 @@
     "\n",
     "dev_data_sents = list()\n",
     "\n",
-    "for dev_sent_1, dev_sent_2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
+    "# for dev_sent_1, dev_sent_2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
+    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))][:SENT_MAX_LEN] + \\\n",
+    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
+    "#     vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "\n",
+    "for dev_sent_1, dev_sent_2 in tqdm(zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']),\n",
+    "                                   total=len(dev_data_xnli['sentence1'])):\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + \\\n",
+    "    [vocab[vocab.eos_token]]\n",
     "    \n",
     "    dev_data_sents.append(tokens)\n",
     "\n",
@@ -326,10 +348,16 @@
     "\n",
     "test_data_sents = list()\n",
     "\n",
-    "for test_sent_1, test_sent_2 in zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']):\n",
+    "# for test_sent_1, test_sent_2 in zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']):\n",
+    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))][:SENT_MAX_LEN] + \\\n",
+    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
+    "#     vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "\n",
+    "for test_sent_1, test_sent_2 in tqdm(zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']),\n",
+    "                                   total=len(test_data_xnli['sentence1'])):\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + \\\n",
+    "    [vocab[vocab.eos_token]]\n",
     "    \n",
     "    test_data_sents.append(tokens)\n",
     "\n",
