:pencil2: Fix typos

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
@@ -233,7 +233,7 @@
     "        outputs1 = self.gpt2(inputs[:, 0, :])\n",
     "        outputs2 = self.gpt2(inputs[:, 1, :])\n",
     "        outputs = outputs1[0] + outputs2[0]\n",
-    "        pooled_output = outputs[:, -1] #TODO: fix index from -1 to \n",
+    "        pooled_output = outputs[:, -1]\n",
     "\n",
     "        pooled_output = self.dropout(pooled_output)\n",
     "        logits = self.regressor(pooled_output)\n",
