modified ch 7 gpt2 model tutorials by taekyoon

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_text_classification_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_text_classification_finetune-KOR.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from transformers import *\n",
+    "from transformers import TFGPT2Model\n",
     "\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
@@ -55,7 +55,15 @@
    "outputs": [],
    "source": [
     "SEED_NUM = 1234\n",
-    "tf.random.set_seed(SEED_NUM)"
+    "tf.random.set_seed(SEED_NUM)\n",
+    "np.random.seed(SEED_NUM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPT2 분류 모델"
    ]
   },
   {
@@ -91,6 +99,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 데이터 준비하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -102,7 +117,7 @@
     "vocab = nlp.vocab.BERTVocab.from_sentencepiece(TOKENIZER_PATH,\n",
     "                                               mask_token=None,\n",
     "                                               sep_token='<unused0>',\n",
-    "                                               cls_token='<unused1>',\n",
+    "                                               cls_token=None,\n",
     "                                               unknown_token='<unk>',\n",
     "                                               padding_token='<pad>',\n",
     "                                               bos_token='<s>',\n",
@@ -115,16 +130,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.random.set_seed(0)\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "BATCH_SIZE = 10\n",
+    "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
     "VALID_SPLIT = 0.1\n",
     "SENT_MAX_LEN = 39\n",
-    "MAX_LEN = SENT_MAX_LEN + 3\n",
-    "DATA_IN_PATH = 'data_in/KOR'\n",
-    "DATA_OUT_PATH = \"data_out/KOR\""
+    "\n",
+    "DATA_IN_PATH = './data_in/KOR'\n",
+    "DATA_OUT_PATH = \"./data_out/KOR\""
    ]
   },
   {
@@ -140,7 +152,9 @@
     "\n",
     "train_data = pd.read_csv(DATA_TRAIN_PATH, header = 0, delimiter = '\\t', quoting = 3)\n",
     "train_data = train_data.dropna()\n",
-    "train_data.head()"
+    "train_data.head()\n",
+    "\n",
+    "print(\"Total # dataset: train - {}\".format(len(train_data)))"
    ]
   },
   {
@@ -167,16 +181,29 @@
     "train_data_sents = list()\n",
     "train_data_labels = list()\n",
     "\n",
-    "for train_sent, train_label in zip(train_data['document'], train_data['label']):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent))][:SENT_MAX_LEN] + \\\n",
-    "             [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "for train_sent, train_label in tqdm(train_data[['document', 'label']].values,\n",
+    "                                    total=len(train_data)), :\n",
+    "    train_tokenized_text = vocab[tokenizer(clean_text(train_sent))]\n",
+    "\n",
+    "    tokens = [vocab[vocab.bos_token]]  \n",
+    "    tokens += pad_sequences([train_tokenized_text], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.eos_token]]\n",
+    "\n",
     "    train_data_sents.append(tokens)\n",
     "    train_data_labels.append(train_label)\n",
     "\n",
-    "train_data_sents = pad_sequences(train_data_sents, MAX_LEN - 1, value=vocab[vocab.padding_token])\n",
-    "\n",
     "train_data_sents = np.array(train_data_sents, dtype=np.int64)\n",
     "train_data_labels = np.array(train_data_labels, dtype=np.int64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 학습"
    ]
   },
   {
@@ -208,7 +235,7 @@
    "source": [
     "model_name = \"tf2_gpt2_naver_movie\"\n",
     "\n",
-    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=2)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001, patience=2)\n",
     "\n",
     "checkpoint_path = os.path.join(DATA_OUT_PATH, model_name, 'weights.h5')\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
@@ -222,8 +249,11 @@
     "cp_callback = ModelCheckpoint(\n",
     "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
     "\n",
-    "history = cls_model.fit(train_data_sents, train_data_labels, epochs=NUM_EPOCHS, batch_size=BATCH_SIZE,\n",
-    "                    validation_split = VALID_SPLIT, callbacks=[earlystop_callback, cp_callback])"
+    "history = cls_model.fit(train_data_sents, train_data_labels, \n",
+    "                        epochs=NUM_EPOCHS, \n",
+    "                        batch_size=BATCH_SIZE,\n",
+    "                        validation_split=VALID_SPLIT, \n",
+    "                        callbacks=[earlystop_callback, cp_callback])"
    ]
   },
   {
@@ -248,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bag of Words Test Dataset (제출 확인 필요)"
+    "## 모델 테스트"
    ]
   },
   {
@@ -257,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv(DATA_TEST_PATH, header = 0, delimiter = '\\t', quoting = 3)\n",
+    "test_data = pd.read_csv(DATA_TEST_PATH, header=0, delimiter='\\t', quoting=3)\n",
     "test_data = test_data.dropna()\n",
     "test_data.head()"
    ]
@@ -273,13 +303,19 @@
     "test_data_sents = list()\n",
     "test_data_labels = list()\n",
     "\n",
-    "for test_sent, test_label in zip(test_data['document'], test_data['label']):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent))][:SENT_MAX_LEN] + \\\n",
-    "             [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "for test_sent, test_label in tqdm(test_data[['document','label']].values,\n",
+    "                                  total=len(test_data)):\n",
+    "    test_tokenized_text = vocab[tokenizer(clean_text(test_sent))]\n",
+    "\n",
+    "    tokens = [vocab[vocab.bos_token]]  \n",
+    "    tokens += pad_sequences([test_tokenized_text], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.eos_token]]\n",
+    "\n",
     "    test_data_sents.append(tokens)\n",
     "    test_data_labels.append(test_label)\n",
-    "\n",
-    "test_data_sents = pad_sequences(test_data_sents, MAX_LEN - 1, value=vocab[vocab.padding_token])\n",
     "\n",
     "test_data_sents = np.array(test_data_sents, dtype=np.int64)\n",
     "test_data_labels = np.array(test_data_labels, dtype=np.int64)"
@@ -328,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
