--- a/7.PRETRAIN_METHOD/7.4.1.gpt2_language_generation_finetune.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.1.gpt2_language_generation_finetune.ipynb
@@ -75,9 +75,8 @@
    "source": [
     "def tf_top_k_top_p_filtering(logits, top_k=0, top_p=0.0, filter_value=-99999):\n",
     "    _logits = logits.numpy()\n",
-    "    top_k = min(top_k, logits.shape[-1])  # Safety check\n",
+    "    top_k = min(top_k, logits.shape[-1])  \n",
     "    if top_k > 0:\n",
-    "        # Remove all tokens with a probability less than the last token of the top-k\n",
     "        indices_to_remove = logits < tf.math.top_k(logits, top_k)[0][..., -1, None]\n",
     "        _logits[indices_to_remove] = filter_value\n",
     "\n",
@@ -86,9 +85,7 @@
     "        sorted_indices = tf.argsort(logits, direction='DESCENDING')\n",
     "        cumulative_probs = tf.math.cumsum(tf.nn.softmax(sorted_logits, axis=-1), axis=-1)\n",
     "\n",
-    "        # Remove tokens with cumulative probability above the threshold\n",
     "        sorted_indices_to_remove = cumulative_probs > top_p\n",
-    "        # Shift the indices to the right to keep also the first token above the threshold\n",
     "        sorted_indices_to_remove = tf.concat([[False], sorted_indices_to_remove[..., :-1]], axis=0)\n",
     "        indices_to_remove = sorted_indices[sorted_indices_to_remove].numpy().tolist()\n",
     "        \n",
@@ -224,11 +221,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = 'finetuned_model'\n",
-    "if not os.path.exists(SAVE_PATH):\n",
-    "    os.mkdir(SAVE_PATH)\n",
+    "DATA_OUT_PATH = './data_out'\n",
+    "model_name = \"tf2_gpt2_finetuned_model\"\n",
     "\n",
-    "gpt_model.gpt2.save_pretrained(SAVE_PATH)"
+    "save_path = os.path.join(DATA_OUT_PATH, model_name)\n",
+    "\n",
+    "if not os.path.exists(save_path):\n",
+    "    os.makedirs(save_path)\n",
+    "\n",
+    "gpt_model.gpt2.save_pretrained(save_path)\n",
+    "\n",
+    "loaded_gpt_model = GPT2Model(save_path)"
    ]
   },
   {
@@ -266,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
