--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_text_inference_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_text_inference_finetune-KOR.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from transformers import *\n",
+    "from transformers import TFGPT2Model\n",
     "\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
@@ -53,7 +53,15 @@
    "outputs": [],
    "source": [
     "SEED_NUM = 1234\n",
-    "tf.random.set_seed(SEED_NUM)"
+    "tf.random.set_seed(SEED_NUM)\n",
+    "np.random.seed(SEED_NUM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPT2 분류 모델"
    ]
   },
   {
@@ -89,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 데이터 준비하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,7 +115,7 @@
     "vocab = nlp.vocab.BERTVocab.from_sentencepiece(TOKENIZER_PATH,\n",
     "                                               mask_token=None,\n",
     "                                               sep_token='<unused0>',\n",
-    "                                               cls_token='<unused1>',\n",
+    "                                               cls_token=None,\n",
     "                                               unknown_token='<unk>',\n",
     "                                               padding_token='<pad>',\n",
     "                                               bos_token='<s>',\n",
@@ -113,33 +128,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab.token_to_idx"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# KoNLI Simliarity "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.random.set_seed(0)\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "BATCH_SIZE = 10\n",
+    "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
-    "VALID_SPLIT = 0.2\n",
     "SENT_MAX_LEN = 31\n",
-    "MAX_LEN = (SENT_MAX_LEN * 2) + 6\n",
     "\n",
-    "DATA_IN_PATH = 'data_in/KOR'\n",
-    "DATA_OUT_PATH = \"data_out/KOR\""
+    "DATA_IN_PATH = './data_in/KOR'\n",
+    "DATA_OUT_PATH = \"./data_out/KOR\""
    ]
   },
   {
@@ -154,9 +148,9 @@
     "TRAIN_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'multinli.train.ko.tsv')\n",
     "DEV_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'xnli.dev.ko.tsv')\n",
     "\n",
-    "train_data_snli = pd.read_csv(TRAIN_SNLI_DF, header=0, delimiter = '\\t', quoting = 3)\n",
-    "train_data_xnli = pd.read_csv(TRAIN_XNLI_DF, header=0, delimiter = '\\t', quoting = 3)\n",
-    "dev_data_xnli = pd.read_csv(DEV_XNLI_DF, header=0, delimiter = '\\t', quoting = 3)\n",
+    "train_data_snli = pd.read_csv(TRAIN_SNLI_DF, header=0, delimiter='\\t', quoting=3)\n",
+    "train_data_xnli = pd.read_csv(TRAIN_XNLI_DF, header=0, delimiter='\\t', quoting=3)\n",
+    "dev_data_xnli = pd.read_csv(DEV_XNLI_DF, header=0, delimiter='\\t', quoting=3)\n",
     "\n",
     "train_data_snli_xnli = train_data_snli.append(train_data_xnli)\n",
     "train_data_snli_xnli = train_data_snli_xnli.dropna()\n",
@@ -173,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data_snli_xnli = train_data_snli_xnli[:50] # for test\n",
+    "# train_data_snli_xnli = train_data_snli_xnli[:1000] # for test\n",
     "\n",
     "# 토크나이저를 제외하고는 5장에서 처리한 방식과 유사하게 접근\n",
     "def clean_text(sent):\n",
@@ -182,20 +176,24 @@
     "\n",
     "train_data_sents = list()\n",
     "\n",
-    "# for train_sent_1, train_sent_2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
-    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "#     vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "for train_sent_1, train_sent_2 in tqdm(train_data_snli_xnli[['sentence1', 'sentence2']].values, \n",
+    "                                       total=len(train_data_snli_xnli):\n",
+    "    tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
+    "    tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
     "\n",
-    "for train_sent_1, train_sent_2 in tqdm(zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']), \n",
-    "                                       total=len(train_data_snli_xnli['sentence1'])):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token]]\n",
-    "    \n",
-    "    train_data_sents.append(tokens)\n",
-    "     \n",
-    "train_data_sents = pad_sequences(train_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
+    "    tokens = [vocab[vocab.bos_token]] \n",
+    "    tokens += pad_sequences([tokenized_sent_1], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.sep_token]]  \n",
+    "    tokens += pad_sequences([tokenized_sent_2], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.eos_token]]\n",
+    "\n",
+    "    train_data_sents.append(tokens)    \n",
     "\n",
     "train_data_sents = np.array(train_data_sents, dtype=np.int64)"
    ]
@@ -210,20 +208,24 @@
     "\n",
     "dev_data_sents = list()\n",
     "\n",
-    "# for dev_sent_1, dev_sent_2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
-    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "#     vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "for dev_sent_1, dev_sent_2 in tqdm(dev_data_xnli[['sentence1', 'sentence2']].values, \n",
+    "                                   total=len(dev_data_xnli):\n",
+    "    tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
+    "    tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
     "\n",
-    "for dev_sent_1, dev_sent_2 in tqdm(zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']),\n",
-    "                                   total=len(dev_data_xnli['sentence1'])):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token]]\n",
-    "    \n",
-    "    dev_data_sents.append(tokens)\n",
+    "    tokens = [vocab[vocab.bos_token]] \n",
+    "    tokens += pad_sequences([tokenized_sent_1], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.sep_token]]  \n",
+    "    tokens += pad_sequences([tokenized_sent_2], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.eos_token]]\n",
     "\n",
-    "dev_data_sents = pad_sequences(dev_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
+    "    dev_data_sents.append(tokens)    \n",
     "\n",
     "dev_data_sents = np.array(dev_data_sents, dtype=np.int64)"
    ]
@@ -236,6 +238,7 @@
    "source": [
     "# Label을 Netural, Contradiction, Entailment 에서 숫자 형으로 변경한다.\n",
     "label_dict = {\"entailment\": 0, \"contradiction\": 1, \"neutral\": 2}\n",
+    "\n",
     "def convert_int(label):\n",
     "    num_label = label_dict[label]    \n",
     "    return num_label\n",
@@ -247,6 +250,13 @@
     "dev_data_labels = np.array(dev_data_xnli['gold_label_int'], dtype=int)\n",
     "\n",
     "print(\"# train labels: {}, #dev labels: {}\".format(len(train_data_labels), len(dev_data_labels)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 학습"
    ]
   },
   {
@@ -278,7 +288,7 @@
    "source": [
     "model_name = \"tf2_gpt_kornli\"\n",
     "\n",
-    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=2)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001, patience=2)\n",
     "\n",
     "checkpoint_path = os.path.join(DATA_OUT_PATH, model_name, 'weights.h5')\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
@@ -292,9 +302,11 @@
     "cp_callback = ModelCheckpoint(\n",
     "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
     "\n",
-    "history = sim_model.fit(train_data_sents, train_data_labels, epochs=NUM_EPOCHS,\n",
-    "                        validation_data = (dev_data_sents, dev_data_labels),\n",
-    "            batch_size=BATCH_SIZE, callbacks=[earlystop_callback, cp_callback])"
+    "history = sim_model.fit(train_data_sents, train_data_labels, \n",
+    "                        epochs=NUM_EPOCHS,\n",
+    "                        validation_data=(dev_data_sents, dev_data_labels),\n",
+    "                        batch_size=BATCH_SIZE, \n",
+    "                        callbacks=[earlystop_callback, cp_callback])"
    ]
   },
   {
@@ -321,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quora Simliarity TEST"
+    "## 모델 테스트"
    ]
   },
   {
@@ -335,7 +347,7 @@
     "# Load Test dataset\n",
     "TEST_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'xnli.test.ko.tsv')\n",
     "\n",
-    "test_data_xnli = pd.read_csv(TEST_XNLI_DF, header=0, delimiter = '\\t', quoting = 3)"
+    "test_data_xnli = pd.read_csv(TEST_XNLI_DF, header=0, delimiter='\\t', quoting=3)"
    ]
   },
   {
@@ -348,20 +360,24 @@
     "\n",
     "test_data_sents = list()\n",
     "\n",
-    "# for test_sent_1, test_sent_2 in zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']):\n",
-    "#     tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "#     [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "#     vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "for test_sent_1, test_sent_2 in tqdm(test_data_xnli[['sentence1', 'sentence2']].values, \n",
+    "                                     total=len(test_data_xnli)):\n",
+    "    test_tokenized_sent_1 = vocab[tokenizer(clean_text(test_sent_1))]\n",
+    "    test_tokenized_sent_2 = vocab[tokenizer(clean_text(test_sent_2))]\n",
     "\n",
-    "for test_sent_1, test_sent_2 in tqdm(zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']),\n",
-    "                                   total=len(test_data_xnli['sentence1'])):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.sep_token],]  + vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + \\\n",
-    "    [vocab[vocab.eos_token]]\n",
-    "    \n",
-    "    test_data_sents.append(tokens)\n",
+    "    tokens = [vocab[vocab.bos_token]] \n",
+    "    tokens += pad_sequences([test_tokenized_sent_1], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.sep_token]]  \n",
+    "    tokens += pad_sequences([test_tokenized_sent_2], \n",
+    "                            SENT_MAX_LEN, \n",
+    "                            value=vocab[vocab.padding_token], \n",
+    "                            padding='post').tolist()[0] \n",
+    "    tokens += [vocab[vocab.eos_token]]\n",
     "\n",
-    "test_data_sents = pad_sequences(test_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
+    "    test_data_sents.append(tokens)    \n",
     "\n",
     "test_data_sents = np.array(test_data_sents, dtype=np.int64)"
    ]
@@ -412,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
