modified in gpt2 kornli to fix variable issues

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
@@ -178,16 +178,16 @@
     "\n",
     "for train_sent_1, train_sent_2 in tqdm(train_data_snli_xnli[['sentence1', 'sentence2']].values, \n",
     "                                       total=len(train_data_snli_xnli):\n",
-    "    tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
-    "    tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
+    "    train_tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
+    "    train_tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
     "\n",
     "    tokens = [vocab[vocab.bos_token]] \n",
-    "    tokens += pad_sequences([tokenized_sent_1], \n",
+    "    tokens += pad_sequences([train_tokenized_sent_1], \n",
     "                            SENT_MAX_LEN, \n",
     "                            value=vocab[vocab.padding_token], \n",
     "                            padding='post').tolist()[0] \n",
     "    tokens += [vocab[vocab.sep_token]]  \n",
-    "    tokens += pad_sequences([tokenized_sent_2], \n",
+    "    tokens += pad_sequences([train_tokenized_sent_2], \n",
     "                            SENT_MAX_LEN, \n",
     "                            value=vocab[vocab.padding_token], \n",
     "                            padding='post').tolist()[0] \n",
@@ -210,16 +210,16 @@
     "\n",
     "for dev_sent_1, dev_sent_2 in tqdm(dev_data_xnli[['sentence1', 'sentence2']].values, \n",
     "                                   total=len(dev_data_xnli):\n",
-    "    tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
-    "    tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
+    "    dev_tokenized_sent_1 = vocab[tokenizer(clean_text(dev_sent_1))]\n",
+    "    dev_tokenized_sent_2 = vocab[tokenizer(clean_text(dev_sent_2))]\n",
     "\n",
     "    tokens = [vocab[vocab.bos_token]] \n",
-    "    tokens += pad_sequences([tokenized_sent_1], \n",
+    "    tokens += pad_sequences([dev_tokenized_sent_1], \n",
     "                            SENT_MAX_LEN, \n",
     "                            value=vocab[vocab.padding_token], \n",
     "                            padding='post').tolist()[0] \n",
     "    tokens += [vocab[vocab.sep_token]]  \n",
-    "    tokens += pad_sequences([tokenized_sent_2], \n",
+    "    tokens += pad_sequences([dev_tokenized_sent_2], \n",
     "                            SENT_MAX_LEN, \n",
     "                            value=vocab[vocab.padding_token], \n",
     "                            padding='post').tolist()[0] \n",
