modified model class init funtion to update attributes

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -73,13 +73,11 @@
    "outputs": [],
    "source": [
     "class TFGPT2Classifier(tf.keras.Model):\n",
-    "    def __init__(self, dir_path=None, num_class=None):\n",
+    "    def __init__(self, dir_path, num_class=2):\n",
     "        super(TFGPT2Classifier, self).__init__()\n",
     "        \n",
-    "        self.dir_path = 'gpt2' if dir_path is None else dir_path\n",
-    "        \n",
-    "        self.gpt2 = TFGPT2Model.from_pretrained(self.dir_path)\n",
-    "        self.num_class = self.gpt2.config.num_labels if num_class is None else num_class\n",
+    "        self.gpt2 = TFGPT2Model.from_pretrained(dir_path)\n",
+    "        self.num_class = num_class\n",
     "        \n",
     "        self.dropout = tf.keras.layers.Dropout(self.gpt2.config.summary_first_dropout)\n",
     "        self.classifier = tf.keras.layers.Dense(self.num_class, \n",
