modified codelines following code convention

--- a/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
@@ -18,6 +18,7 @@
     "from random import sample, seed\n",
     "from transformers import BertTokenizer\n",
     "from tokenizers import BertWordPieceTokenizer\n",
+    "from nltk.tokenize import sent_tokenize\n",
     "\n",
     "seed(1234)\n",
     "phoneme_tokenizer = Okt()\n",
@@ -172,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 지문 텍스트 BPE(Byte Pair Encoding) 토큰 길이 분석"
+    "### 지문 텍스트 버트 토크나이저 토큰 길이 분석"
    ]
   },
   {
@@ -218,7 +219,7 @@
    "source": [
     "plt.figure(figsize=(15, 10))\n",
     "plt.hist(filtered_len_bert_tokenized_docs, bins=150, range=[0,1000], facecolor='r', density=True, label='train')\n",
-    "plt.title(\"Distribution of BPE token count in paragraph\", fontsize=15)\n",
+    "plt.title(\"Distribution of Bert Tokenizer token count in paragraph\", fontsize=15)\n",
     "plt.legend()\n",
     "plt.xlabel('Number of words', fontsize=15)\n",
     "plt.ylabel('Probability', fontsize=15)"
@@ -244,7 +245,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampled_docs = sample(documents, 3000)"
+    "sentences = []\n",
+    "for d in documents:\n",
+    "    sentences += sent_tokenize(d)\n",
+    "\n",
+    "print('전체 문장 수: {}'.format(len(sentences)))\n",
+    "sampled_docs = sample(sentences, 20000)"
    ]
   },
   {
@@ -362,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 질문 텍스트 BPE(Byte Pair Encoding) 토큰 길이 분석"
+    "### 질문 텍스트 버트 토크나이저 토큰 길이 분석"
    ]
   },
   {
@@ -408,7 +414,7 @@
    "source": [
     "plt.figure(figsize=(15, 10))\n",
     "plt.hist(len_bert_tokenized_q, bins=50, range=[0,50], facecolor='r', density=True, label='train')\n",
-    "plt.title(\"Distribution of BPE token count in sentence\", fontsize=15)\n",
+    "plt.title(\"Distribution of Bert Tokenizer token count in sentence\", fontsize=15)\n",
     "plt.legend()\n",
     "plt.xlabel('Number of words', fontsize=15)\n",
     "plt.ylabel('Probability', fontsize=15)"
@@ -489,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
