added loading saved model

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -327,6 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cls_model.load_weights(checkpoint_path)\n",
+    "\n",
     "results = cls_model.evaluate(test_data_sents, test_data_labels, batch_size=1024)\n",
     "print(\"test loss, test acc: \", results)"
    ]
