--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
@@ -391,6 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sim_model.load_weights(checkpoint_path)\n",
+    "\n",
     "results = sim_model.evaluate(test_data_sents, test_data_labels, batch_size=1024)\n",
     "print(\"test loss, test acc: \", results)"
    ]
