:bug: Fix bert cased

--- a/7.PRETRAIN_METHOD/7.2.STS_EDA.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.STS_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -11,11 +11,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0803 22:16:18.491664 4344176064 file_utils.py:39] PyTorch version 1.1.0.post2 available.\n",
-      "I0803 22:16:22.128773 4344176064 file_utils.py:55] TensorFlow version 2.2.0 available.\n",
-      "I0803 22:16:22.653692 4344176064 _import_c_extension.py:31] Failed to import cuda module: No module named 'caffe2.python.caffe2_pybind11_state_gpu'\n",
-      "I0803 22:16:22.655086 4344176064 _import_c_extension.py:38] Failed to import AMD hip module: No module named 'caffe2.python.caffe2_pybind11_state_hip'\n",
-      "W0803 22:16:22.655849 4344176064 _import_c_extension.py:41] This caffe2 python run does not have GPU support. Will run in CPU only mode.\n"
+      "I0808 20:42:05.166074 4600761792 file_utils.py:39] PyTorch version 1.1.0.post2 available.\n",
+      "I0808 20:42:08.542520 4600761792 file_utils.py:55] TensorFlow version 2.2.0 available.\n",
+      "I0808 20:42:08.975909 4600761792 _import_c_extension.py:31] Failed to import cuda module: No module named 'caffe2.python.caffe2_pybind11_state_gpu'\n",
+      "I0808 20:42:08.977365 4600761792 _import_c_extension.py:38] Failed to import AMD hip module: No module named 'caffe2.python.caffe2_pybind11_state_hip'\n",
+      "W0808 20:42:08.978204 4600761792 _import_c_extension.py:41] This caffe2 python run does not have GPU support. Will run in CPU only mode.\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -51,7 +51,7 @@
        "['sts-train.tsv', 'NanumGothic.ttf', 'sts-dev.tsv', 'sts-test.tsv']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "9                사람이 고양이를 천장에 던진다.  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "Text(0, 0.5, 'Number of sentence')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,23 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fd6b065f0f0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6b065f438>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7fd6b065f780>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6b065fac8>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7fd6f8740438>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7fd6b065fe10>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7fd6b06694a8>],\n",
-       " 'means': [<matplotlib.lines.Line2D at 0x7fd6b0669198>]}"
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fb778698390>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb7786986d8>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7fb778698a20>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb778698d68>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7fb778698240>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7fb75e8060f0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7fb75e806748>],\n",
+       " 'means': [<matplotlib.lines.Line2D at 0x7fb75e806438>]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "Text(0, 0.5, 'Probability')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -515,23 +515,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fd6e8656588>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6e8656908>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7fd6e8656c50>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6e8656f98>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7fd6c8a55cc0>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7fd6e8647320>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7fd6e8647978>],\n",
-       " 'means': [<matplotlib.lines.Line2D at 0x7fd6e8647668>]}"
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fb7b8b79550>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb7b8b798d0>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7fb7b8b79c18>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb7b8b79f60>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7fb7b8b79400>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7fb7b8b972e8>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7fb7b8b97940>],\n",
+       " 'means': [<matplotlib.lines.Line2D at 0x7fb7b8b97630>]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "Text(0, 0.5, 'Prabability')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -633,23 +633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fd6ff4eca58>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6ff4ecda0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7fd6ff4f7128>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fd6ff4f7470>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7fd6d8efab70>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7fd6ff4f77b8>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7fd6ff4f7e10>],\n",
-       " 'means': [<matplotlib.lines.Line2D at 0x7fd6ff4f7b00>]}"
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fb760d6bd68>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb760d760f0>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7fb760d76438>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fb760d76780>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7fb760d6bc18>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7fb760d76ac8>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7fb760d7f160>],\n",
+       " 'means': [<matplotlib.lines.Line2D at 0x7fb760d76e10>]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -715,24 +715,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0803 22:16:38.519706 4344176064 tokenization_utils.py:1022] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-vocab.txt from cache at /Users/chojunghyun/.cache/torch/transformers/bb773818882b0524dc53a1b31a2cc95bc489f000e7e19773ba07846011a6c711.535306b226c42cebebbc0dabc83b92ab11260e9919e21e2ab0beb301f267b4c7\n"
+      "I0808 20:42:57.023196 4600761792 tokenization_utils.py:1022] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-vocab.txt from cache at /Users/chojunghyun/.cache/torch/transformers/bb773818882b0524dc53a1b31a2cc95bc489f000e7e19773ba07846011a6c711.535306b226c42cebebbc0dabc83b92ab11260e9919e21e2ab0beb301f267b4c7\n"
      ]
     }
    ],
    "source": [
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-uncased')"
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-uncased', do_lower_case=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "Text(0, 0.5, 'Prabability')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -850,14 +850,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0803 22:16:46.877841 4344176064 tokenization_utils.py:1022] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-vocab.txt from cache at /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729\n"
+      "I0808 20:43:37.112478 4600761792 filelock.py:274] Lock 140425543609312 acquired on /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729.lock\n",
+      "I0808 20:43:37.113934 4600761792 file_utils.py:437] https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-vocab.txt not found in cache or force_download set to True, downloading to /Users/chojunghyun/.cache/torch/transformers/tmp64q1v_pk\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39e5853e913843c6ab6b1f32f1f47dae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading', max=995526, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0808 20:43:39.821168 4600761792 file_utils.py:441] storing https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-vocab.txt in cache at /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729\n",
+      "I0808 20:43:39.822227 4600761792 file_utils.py:444] creating metadata file for /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729\n",
+      "I0808 20:43:39.823536 4600761792 filelock.py:318] Lock 140425543609312 released on /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729.lock\n",
+      "I0808 20:43:39.824200 4600761792 tokenization_utils.py:1022] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-vocab.txt from cache at /Users/chojunghyun/.cache/torch/transformers/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
