--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0803 22:37:32.298552 4615069120 file_utils.py:39] PyTorch version 1.1.0.post2 available.\n",
-      "I0803 22:37:32.299318 4615069120 file_utils.py:55] TensorFlow version 2.2.0 available.\n",
-      "I0803 22:37:32.713661 4615069120 _import_c_extension.py:31] Failed to import cuda module: No module named 'caffe2.python.caffe2_pybind11_state_gpu'\n",
-      "I0803 22:37:32.714529 4615069120 _import_c_extension.py:38] Failed to import AMD hip module: No module named 'caffe2.python.caffe2_pybind11_state_hip'\n",
-      "W0803 22:37:32.715052 4615069120 _import_c_extension.py:41] This caffe2 python run does not have GPU support. Will run in CPU only mode.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -50,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +196,23 @@
     "dev_data_sents2 = np.array(dev_data_sents2, dtype=np.int64)\n",
     "dev_data_sents = np.stack((dev_data_sents1, dev_data_sents2), 1)\n",
     "dev_data_labels = np.array(dev_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of dataset: train - (5749, 2, 69), dev - (1500, 2, 69)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of dataset: train - {}, dev - {}\".format(train_data_sents.shape, dev_data_sents.shape))"
    ]
   },
   {
@@ -312,9 +318,8 @@
     "        return pearson_correlation\n",
     "\n",
     "    def reset_states(self):\n",
-    "        # The state of the metric will be reset at the start of each epoch.\n",
-    "        self.y_true_list = []#self.add_weight(name='true', initializer=\"zeros\", shape=(0,))\n",
-    "        self.y_pred_list = []#self.add_weight(name=\"pred\", initializer=\"zeros\", shape=(0,))\n",
+    "        self.y_true_list = []\n",
+    "        self.y_pred_list = []\n",
     "        \n",
     "\n",
     "    def pearson(self, true, pred):\n",
@@ -407,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graphs(history, 'pearson_correaltion')"
+    "plot_graphs(history, 'pearson_correlation')"
    ]
   },
   {
@@ -425,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quora Simliarity TEST"
+    "# KorSTSTEST"
    ]
   },
   {
@@ -637,7 +642,7 @@
    ],
    "source": [
     "results = sim_model.evaluate(test_data_sents, test_data_labels, batch_size=512)\n",
-    "print(\"test loss, test acc: \", results)"
+    "print(\"test loss, test pearson correlation: \", results)"
    ]
   },
   {
