--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -192,9 +192,7 @@
     "        pooled_output = self.dropout(pooled_output)\n",
     "        logits = self.classifier(pooled_output)\n",
     "\n",
-    "        outputs = (logits,) + outputs[2:] \n",
-    "\n",
-    "        return outputs"
+    "        return logits"
    ]
   },
   {
