modified model data preprocess

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
@@ -137,8 +137,7 @@
     "\n",
     "train_data_sents = list()\n",
     "\n",
-    "for train_sent_1, train_sent_2 in tqdm(train_data_snli_xnli[['sentence1', 'sentence2']].values, \n",
-    "                                       total=len(train_data_snli_xnli):\n",
+    "for train_sent_1, train_sent_2 in train_data_snli_xnli[['sentence1', 'sentence2']].values:\n",
     "    train_tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
     "    train_tokenized_sent_2 = vocab[tokenizer(clean_text(train_sent_2))]\n",
     "\n",
@@ -169,8 +168,7 @@
     "\n",
     "dev_data_sents = list()\n",
     "\n",
-    "for dev_sent_1, dev_sent_2 in tqdm(dev_data_xnli[['sentence1', 'sentence2']].values, \n",
-    "                                   total=len(dev_data_xnli):\n",
+    "for dev_sent_1, dev_sent_2 in dev_data_xnli[['sentence1', 'sentence2']].values:\n",
     "    dev_tokenized_sent_1 = vocab[tokenizer(clean_text(dev_sent_1))]\n",
     "    dev_tokenized_sent_2 = vocab[tokenizer(clean_text(dev_sent_2))]\n",
     "\n",
@@ -349,8 +347,7 @@
     "\n",
     "test_data_sents = list()\n",
     "\n",
-    "for test_sent_1, test_sent_2 in tqdm(test_data_xnli[['sentence1', 'sentence2']].values, \n",
-    "                                     total=len(test_data_xnli)):\n",
+    "for test_sent_1, test_sent_2 in test_data_xnli[['sentence1', 'sentence2']].values:\n",
     "    test_tokenized_sent_1 = vocab[tokenizer(clean_text(test_sent_1))]\n",
     "    test_tokenized_sent_2 = vocab[tokenizer(clean_text(test_sent_2))]\n",
     "\n",
