--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -142,8 +142,7 @@
     "train_data_sents = list()\n",
     "train_data_labels = list()\n",
     "\n",
-    "for train_sent, train_label in tqdm(train_data[['document', 'label']].values,\n",
-    "                                    total=len(train_data)), :\n",
+    "for train_sent, train_label in train_data[['document', 'label']].values:\n",
     "    train_tokenized_text = vocab[tokenizer(clean_text(train_sent))]\n",
     "\n",
     "    tokens = [vocab[vocab.bos_token]]  \n",
@@ -292,8 +291,7 @@
     "test_data_sents = list()\n",
     "test_data_labels = list()\n",
     "\n",
-    "for test_sent, test_label in tqdm(test_data[['document','label']].values,\n",
-    "                                  total=len(test_data)):\n",
+    "for test_sent, test_label in test_data[['document','label']].values:\n",
     "    test_tokenized_text = vocab[tokenizer(clean_text(test_sent))]\n",
     "\n",
     "    tokens = [vocab[vocab.bos_token]]  \n",
